# US_NPDs_HYPER

./: Borg_MO_Optimisation.py  LICENSE  MO_energy_function.py  PostProcessor.py  README.md  filtered_dams_enriched.csv  global_parameters.json  globalpars_JSON.py  model_functions.py  parameters_check.py  perc_reader.py
PyBorg/: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
PyBorg/.github/workflows/: ci.yml
input/: fairmonth_percentiles.txt  percentiles.txt
