[build-system]
requires = ["setuptools >= 63.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PyBorg"
description = "Python implementation of the Borg MOEA"
authors = [
  { name="Andrew Dircks" },
  { name="David Hadka", email="dhadka@github.com" },
]
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">= 3.5"
dependencies = ["platypus-opt"]
version = "1.0.0"

[project.urls]
"Homepage" = "https://github.com/BorgMOEA/PyBorg"
"Documentation" = "https://github.com/BorgMOEA/PyBorg"
"Bug Tracker" = "https://github.com/BorgMOEA/PyBorg/issues"

[project.optional-dependencies]
test = ["pytest"]
